--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.1.10",
+        "@vitejs/plugin-react": "^4.6.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
         "tailwindcss": "^4.1.10",
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "jsonwebtoken": "^9.0.2"
+        "@ant-design/icons": "^6.0.0",
+        "@heroicons/react": "^2.2.0",
+        "antd": "^5.26.3",
+        "bootstrap": "^5.3.7",
+        "jsonwebtoken": "^9.0.2",
+        "lucide-react": "^0.525.0",
+        "react-bootstrap": "^2.10.10",
+        "react-router-dom": "^6.30.1"
     }
 }
