--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
         "@heroicons/react": "^2.2.0",
         "antd": "^5.26.3",
         "bootstrap": "^5.3.7",
+        "formik": "^2.4.6",
         "jsonwebtoken": "^9.0.2",
+        "jwt-decode": "^4.0.0",
         "lucide-react": "^0.525.0",
         "react-bootstrap": "^2.10.10",
-        "react-router-dom": "^6.30.1"
+        "react-icons": "^5.5.0",
+        "react-router-dom": "^6.30.1",
+        "react-toastify": "^11.0.5",
+        "yup": "^1.6.1"
     }
 }
